--- a/impl/gwsynthesis/EthernetBRIDGE_syn.rpt.html
+++ b/impl/gwsynthesis/EthernetBRIDGE_syn.rpt.html
@@ -57,11 +57,11 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 <td class="label">Design File</td>
 <td>E:\EthernetBRIDGE\src\fifo_buff.v<br>
 E:\EthernetBRIDGE\src\mac_controller.v<br>
+E:\EthernetBRIDGE\src\phy_conf.v<br>
 E:\EthernetBRIDGE\src\top_bridge.v<br>
 E:\EthernetBRIDGE\src\top_mac_to_fifo_test.v<br>
 E:\EthernetBRIDGE\src\triple_speed_ethernet_mac\triple_speed_ethernet_mac.v<br>
 E:\EthernetBRIDGE\src\tx_control.v<br>
-E:\EthernetBRIDGE\src\phy_conf.v<br>
 </td>
 </tr>
 <tr>
@@ -86,7 +86,7 @@ E:\EthernetBRIDGE\src\phy_conf.v<br>
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Wed Mar 01 20:15:56 2023
+<td>Thu Mar 02 18:39:05 2023
 </td>
 </tr>
 <tr>
@@ -102,11 +102,11 @@ E:\EthernetBRIDGE\src\phy_conf.v<br>
 </tr>
 <tr>
 <td class="label">Synthesis Process</td>
-<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.375s, Elapsed time = 0h 0m 0.407s, Peak memory usage = 306.648MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.012s, Peak memory usage = 306.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.016s, Peak memory usage = 306.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.013s, Peak memory usage = 306.648MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.009s, Peak memory usage = 306.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 306.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.005s, Peak memory usage = 306.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 306.648MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.009s, Peak memory usage = 306.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.007s, Peak memory usage = 306.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.005s, Peak memory usage = 306.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 0.062s, Elapsed time = 0h 0m 0.057s, Peak memory usage = 306.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.002s, Peak memory usage = 306.648MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.046s, Elapsed time = 0h 0m 0.044s, Peak memory usage = 306.648MB<br/></td>
+<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.25s, Elapsed time = 0h 0m 0.433s, Peak memory usage = 351.934MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.014s, Peak memory usage = 351.934MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 0.031s, Elapsed time = 0h 0m 0.018s, Peak memory usage = 351.934MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.016s, Peak memory usage = 351.934MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.01s, Peak memory usage = 351.934MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 351.934MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.005s, Peak memory usage = 351.934MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 351.934MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.009s, Peak memory usage = 351.934MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.009s, Peak memory usage = 351.934MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.005s, Peak memory usage = 351.934MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 0.062s, Elapsed time = 0h 0m 0.087s, Peak memory usage = 351.934MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.017s, Peak memory usage = 351.934MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.031s, Elapsed time = 0h 0m 0.051s, Peak memory usage = 351.934MB<br/></td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 0.543s, Elapsed time = 0h 0m 0.586s, Peak memory usage = 306.648MB</td>
+<td>CPU time = 0h 0m 0.419s, Elapsed time = 0h 0m 0.674s, Peak memory usage = 351.934MB</td>
 </tr>
 </table>
 <h1><a name="resource">Resource</a></h1>
@@ -118,15 +118,15 @@ E:\EthernetBRIDGE\src\phy_conf.v<br>
 </tr>
 <tr>
 <td class="label"><b>I/O Port </b></td>
-<td>30</td>
+<td>31</td>
 </tr>
 <tr>
 <td class="label"><b>I/O Buf </b></td>
-<td>30</td>
+<td>31</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspIBUF</td>
-<td>7</td>
+<td>8</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspOBUF</td>
@@ -138,11 +138,15 @@ E:\EthernetBRIDGE\src\phy_conf.v<br>
 </tr>
 <tr>
 <td class="label"><b>Register </b></td>
-<td>669</td>
+<td>671</td>
+</tr>
+<tr>
+<td class="label">&nbsp&nbsp&nbsp&nbspDFF</td>
+<td>1</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFFP</td>
-<td>3</td>
+<td>4</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFFPE</td>
@@ -158,7 +162,7 @@ E:\EthernetBRIDGE\src\phy_conf.v<br>
 </tr>
 <tr>
 <td class="label"><b>LUT </b></td>
-<td>602</td>
+<td>606</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT2</td>
@@ -166,19 +170,19 @@ E:\EthernetBRIDGE\src\phy_conf.v<br>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT3</td>
-<td>119</td>
+<td>121</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT4</td>
-<td>391</td>
+<td>393</td>
 </tr>
 <tr>
 <td class="label"><b>INV </b></td>
-<td>5</td>
+<td>6</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspINV</td>
-<td>5</td>
+<td>6</td>
 </tr>
 </table>
 <h2><a name="utilization">Resource Utilization Summary</a></h2>
@@ -190,12 +194,12 @@ E:\EthernetBRIDGE\src\phy_conf.v<br>
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>607(607 LUTs, 0 ALUs) / 20736</td>
+<td>612(612 LUTs, 0 ALUs) / 20736</td>
 <td>3%</td>
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>669 / 15909</td>
+<td>671 / 15909</td>
 <td>5%</td>
 </tr>
 <tr>
@@ -205,7 +209,7 @@ E:\EthernetBRIDGE\src\phy_conf.v<br>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp--Register as FF</td>
-<td>669 / 15909</td>
+<td>671 / 15909</td>
 <td>5%</td>
 </tr>
 <tr>
@@ -250,6 +254,17 @@ E:\EthernetBRIDGE\src\phy_conf.v<br>
 <td> </td>
 <td>phy_tx_clk_ibuf/I </td>
 </tr>
+<tr>
+<td>clk</td>
+<td>Base</td>
+<td>10.000</td>
+<td>100.0</td>
+<td>0.000</td>
+<td>5.000</td>
+<td> </td>
+<td> </td>
+<td>clk_ibuf/I </td>
+</tr>
 </table>
 <h2><a name="performance">Max Frequency Summary:</a></h2>
 <table class="summary_table">
@@ -274,6 +289,14 @@ E:\EthernetBRIDGE\src\phy_conf.v<br>
 <td>phy_tx_clk</td>
 <td>100.0(MHz)</td>
 <td>224.0(MHz)</td>
+<td>6</td>
+<td>TOP</td>
+</tr>
+<tr>
+<td>3</td>
+<td>clk</td>
+<td>100.0(MHz)</td>
+<td>250.4(MHz)</td>
 <td>6</td>
 <td>TOP</td>
 </tr>
