--- a/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
+++ b/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
@@ -37,6 +37,15 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--config_adin1300
+ (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
+<td align = "center">1</td>
+<td align = "center">-</td>
+<td align = "center">1</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--mac
  (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
 <td align = "center">-</td>
@@ -48,9 +57,9 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--mac_controller
  (E:/EthernetBRIDGE/src/mac_controller.v)</td>
-<td align = "center">669</td>
+<td align = "center">670</td>
 <td align = "center">-</td>
-<td align = "center">607</td>
+<td align = "center">611</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
