--- a/impl/pnr/EthernetBRIDGE.pin.html
+++ b/impl/pnr/EthernetBRIDGE.pin.html
@@ -78,7 +78,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Wed Mar 01 20:16:00 2023
+<td>Thu Mar 02 18:39:09 2023
 </td>
 </tr>
 <tr>
@@ -107,6 +107,25 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td><b>Single Resistor</b></td>
 <td><b>Diff Resistor</b></td>
 <td><b>BankVccio</b></td>
+</tr>
+<tr>
+<td class="label">clk</td>
+<td></td>
+<td>11/7</td>
+<td>N</td>
+<td>in</td>
+<td>IOL27[A]</td>
+<td>LVCMOS18</td>
+<td>NA</td>
+<td>UP</td>
+<td>ON</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>1.8</td>
 </tr>
 <tr>
 <td class="label">phy_rx_clk</td>
@@ -358,10 +377,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">data_from_buff[0]</td>
 <td></td>
-<td>11/7</td>
+<td>12/7</td>
 <td>N</td>
 <td>out</td>
-<td>IOL27[A]</td>
+<td>IOL27[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -377,10 +396,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">data_from_buff[1]</td>
 <td></td>
-<td>10/7</td>
+<td>9/7</td>
 <td>N</td>
 <td>out</td>
-<td>IOL22[B]</td>
+<td>IOL22[A]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -415,6 +434,25 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">data_from_buff[3]</td>
 <td></td>
+<td>4/7</td>
+<td>N</td>
+<td>out</td>
+<td>IOL2[B]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[4]</td>
+<td></td>
 <td>137/0</td>
 <td>N</td>
 <td>out</td>
@@ -432,7 +470,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_buff[4]</td>
+<td class="label">data_from_buff[5]</td>
 <td></td>
 <td>136/0</td>
 <td>N</td>
@@ -451,7 +489,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_buff[5]</td>
+<td class="label">data_from_buff[6]</td>
 <td></td>
 <td>135/0</td>
 <td>N</td>
@@ -470,31 +508,12 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_buff[6]</td>
-<td></td>
-<td>134/0</td>
-<td>N</td>
-<td>out</td>
-<td>IOT12[A]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
 <td class="label">data_from_buff[7]</td>
 <td></td>
-<td>131/0</td>
+<td>132/0</td>
 <td>N</td>
 <td>out</td>
-<td>IOT14[B]</td>
+<td>IOT14[A]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -769,7 +788,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">137/0</td>
-<td>data_from_buff[3]</td>
+<td>data_from_buff[4]</td>
 <td>out</td>
 <td>IOT6[B]</td>
 <td>LVCMOS18</td>
@@ -786,7 +805,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">136/0</td>
-<td>data_from_buff[4]</td>
+<td>data_from_buff[5]</td>
 <td>out</td>
 <td>IOT7[A]</td>
 <td>LVCMOS18</td>
@@ -803,7 +822,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">135/0</td>
-<td>data_from_buff[5]</td>
+<td>data_from_buff[6]</td>
 <td>out</td>
 <td>IOT7[B]</td>
 <td>LVCMOS18</td>
@@ -820,16 +839,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">134/0</td>
-<td>data_from_buff[6]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT12[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -854,26 +873,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">132/0</td>
-<td>-</td>
-<td>in</td>
-<td>IOT14[A]</td>
-<td>LVCMOS18</td>
-<td>NA</td>
-<td>UP</td>
-<td>ON</td>
-<td>NONE</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">131/0</td>
 <td>data_from_buff[7]</td>
 <td>out</td>
-<td>IOT14[B]</td>
+<td>IOT14[A]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -881,6 +883,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>OFF</td>
 <td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">131/0</td>
+<td>-</td>
+<td>in</td>
+<td>IOT14[B]</td>
+<td>LVCMOS18</td>
+<td>NA</td>
+<td>UP</td>
+<td>ON</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1806,18 +1825,18 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">4/7</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[3]</td>
+<td>out</td>
 <td>IOL2[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
@@ -1857,9 +1876,26 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">9/7</td>
+<td>data_from_buff[1]</td>
+<td>out</td>
+<td>IOL22[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">10/7</td>
 <td>-</td>
 <td>in</td>
-<td>IOL22[A]</td>
+<td>IOL22[B]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -1873,34 +1909,17 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">10/7</td>
-<td>data_from_buff[1]</td>
-<td>out</td>
-<td>IOL22[B]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
 <td class="label">11/7</td>
-<td>data_from_buff[0]</td>
-<td>out</td>
+<td>clk</td>
+<td>in</td>
 <td>IOL27[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
@@ -1908,18 +1927,18 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">12/7</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[0]</td>
+<td>out</td>
 <td>IOL27[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
