--- a/impl/pnr/EthernetBRIDGE.power.html
+++ b/impl/pnr/EthernetBRIDGE.power.html
@@ -87,7 +87,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Wed Mar 01 20:16:00 2023
+<td>Thu Mar 02 18:39:09 2023
 </td>
 </tr>
 <tr>
@@ -100,22 +100,22 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>172.471</td>
+<td>174.853</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
-<td>163.191</td>
+<td>163.222</td>
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>9.280</td>
+<td>11.631</td>
 </tr>
 </table>
 <h2><a name="Thermal_Info">Thermal Information:</a></h2>
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>27.910</td>
+<td>27.950</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>82.090</td>
+<td>82.050</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -192,23 +192,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.000</td>
-<td>2.495</td>
-<td>102.750</td>
-<td>105.245</td>
+<td>3.039</td>
+<td>102.762</td>
+<td>105.801</td>
 </tr>
 <tr>
 <td>VCCX</td>
 <td>2.500</td>
-<td>1.583</td>
+<td>2.005</td>
 <td>23.366</td>
-<td>62.371</td>
+<td>63.426</td>
 </tr>
 <tr>
 <td>VCCIO18</td>
 <td>1.800</td>
-<td>1.571</td>
-<td>1.126</td>
-<td>4.855</td>
+<td>1.988</td>
+<td>1.137</td>
+<td>5.626</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -222,15 +222,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>0.857</td>
+<td>0.955</td>
 <td>NA</td>
-<td>11.361</td>
+<td>12.500</td>
 </tr>
 <tr>
 <td>IO</td>
-<td>14.384
-<td>6.009
-<td>13.710
+<td>16.679
+<td>6.071
+<td>17.578
 </tr>
 </table>
 <h2><a name="By_Hierarchy">Power By Hierarchy:</a></h2>
@@ -242,20 +242,24 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>top_mac_to_fifo_test</td>
-<td>0.857</td>
-<td>0.857(0.857)</td>
+<td>0.955</td>
+<td>0.955(0.955)</td>
+<tr>
+<td>top_mac_to_fifo_test/config_adin1300/</td>
+<td>0.002</td>
+<td>0.002(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/</td>
-<td>0.857</td>
-<td>0.857(0.857)</td>
+<td>0.953</td>
+<td>0.953(0.953)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/</td>
-<td>0.857</td>
-<td>0.857(0.857)</td>
+<td>0.953</td>
+<td>0.953(0.953)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/</td>
-<td>0.857</td>
-<td>0.857(0.857)</td>
+<td>0.953</td>
+<td>0.953(0.953)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_mac_rx_ctrl/</td>
 <td>0.090</td>
@@ -294,24 +298,24 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.014(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/</td>
-<td>0.000</td>
-<td>0.000(0.000)</td>
+<td>0.096</td>
+<td>0.096(0.096)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/u_eth_miim/</td>
-<td>0.000</td>
-<td>0.000(0.000)</td>
+<td>0.096</td>
+<td>0.096(0.059)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/u_eth_miim/clkgen/</td>
-<td>0.000</td>
-<td>0.000(0.000)</td>
+<td>0.019</td>
+<td>0.019(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/u_eth_miim/outctrl/</td>
-<td>0.000</td>
-<td>0.000(0.000)</td>
+<td>0.007</td>
+<td>0.007(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/u_eth_miim/shftrg/</td>
-<td>0.000</td>
-<td>0.000(0.000)</td>
+<td>0.033</td>
+<td>0.033(0.000)</td>
 </table>
 <h2><a name="By_Clock_Domain">Power By Clock Domain:</a></h2>
 <table class="detail_table">
@@ -331,9 +335,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.752</td>
 </tr>
 <tr>
-<td>NO CLOCK DOMAIN</td>
-<td>0.000</td>
-<td>0.000</td>
+<td>clk</td>
+<td>100.000</td>
+<td>0.118</td>
 </tr>
 </table>
 </div><!-- content -->
