--- a/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
+++ b/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
@@ -32,7 +32,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td class="label">top_mac_to_fifo_test (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
-<td align = "center">1</td>
+<td align = "center">2</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -63,6 +63,24 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">22</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--last_byte_checker
+ (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
+<td align = "center">7</td>
+<td align = "center">5</td>
+<td align = "center">3</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--txfifo
+ (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
+<td align = "center">24</td>
+<td align = "center">22</td>
+<td align = "center">5</td>
+<td align = "center">-</td>
+<td align = "center">1</td>
+<td align = "center">-</td>
 </tr>
 </table>
 </div><!-- content -->
