Added some things for tx support

--- a/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
+++ b/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
@@ -32,7 +32,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td class="label">top_mac_to_fifo_test (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
-<td align = "center">2</td>
+<td align = "center">1</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -57,27 +57,27 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--mac_controller
  (E:/EthernetBRIDGE/src/mac_controller.v)</td>
-<td align = "center">462</td>
+<td align = "center">497</td>
 <td align = "center">-</td>
-<td align = "center">662</td>
+<td align = "center">680</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
-<td align = "center">22</td>
+<td align = "center">23</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--last_byte_checker
  (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
 <td align = "center">7</td>
 <td align = "center">5</td>
-<td align = "center">3</td>
+<td align = "center">4</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--txfifo
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--rxfifo
  (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
-<td align = "center">24</td>
-<td align = "center">22</td>
-<td align = "center">5</td>
+<td align = "center">33</td>
+<td align = "center">29</td>
+<td align = "center">10</td>
 <td align = "center">-</td>
 <td align = "center">1</td>
 <td align = "center">-</td>
