--- a/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
+++ b/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
@@ -30,9 +30,9 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 </tr>
 <tr>
 <td class="label">top_mac_to_fifo_test (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
-<td align = "center">-</td>
-<td align = "center">-</td>
-<td align = "center">1</td>
+<td align = "center">16</td>
+<td align = "center">13</td>
+<td align = "center">2</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -57,27 +57,27 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--mac_controller
  (E:/EthernetBRIDGE/src/mac_controller.v)</td>
-<td align = "center">497</td>
+<td align = "center">565</td>
 <td align = "center">-</td>
-<td align = "center">680</td>
+<td align = "center">725</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">23</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--last_byte_checker
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--controller
  (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
-<td align = "center">7</td>
-<td align = "center">5</td>
-<td align = "center">4</td>
+<td align = "center">10</td>
+<td align = "center">-</td>
+<td align = "center">8</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--rxfifo
  (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
-<td align = "center">33</td>
-<td align = "center">29</td>
-<td align = "center">10</td>
+<td align = "center">36</td>
+<td align = "center">40</td>
+<td align = "center">12</td>
 <td align = "center">-</td>
 <td align = "center">1</td>
 <td align = "center">-</td>
