--- a/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
+++ b/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
@@ -32,7 +32,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td class="label">top_mac_to_fifo_test (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
 <td align = "center">16</td>
 <td align = "center">13</td>
-<td align = "center">2</td>
+<td align = "center">7</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -48,27 +48,27 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--mac_controller
  (E:/EthernetBRIDGE/src/mac_controller.v)</td>
-<td align = "center">564</td>
+<td align = "center">561</td>
 <td align = "center">-</td>
-<td align = "center">721</td>
+<td align = "center">717</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">23</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--controller
  (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
-<td align = "center">26</td>
-<td align = "center">16</td>
-<td align = "center">41</td>
+<td align = "center">27</td>
+<td align = "center">-</td>
+<td align = "center">168</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--rxfifo
  (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
-<td align = "center">36</td>
-<td align = "center">40</td>
-<td align = "center">12</td>
+<td align = "center">24</td>
+<td align = "center">22</td>
+<td align = "center">3</td>
 <td align = "center">-</td>
 <td align = "center">1</td>
 <td align = "center">-</td>
